fix: table caption vs center/right align and p margin

--- a/views/scss/qti/_table.scss
+++ b/views/scss/qti/_table.scss
@@ -7,21 +7,18 @@ table {
         margin-inline: 0 auto;
 
         @include writing-mode-vertical-rl {
-            margin-block: var(--caption-block-size, 0) 0;
+            margin-block-start: var(--caption-block-size-p, var(--caption-block-size, 0));
+            margin-block-end: 0;
         }
         @include writing-mode-horizontal-tb {
             margin-block: 0;
         }
 
         &.table-center {
-            display: table;
-            margin-block: 0;
             margin-inline: auto;
         }
 
         &.table-right {
-            display: table;
-            margin-block: 0;
             margin-inline: auto 0;
         }
 
@@ -57,4 +54,8 @@ table {
             }
         }
     }
+}
+
+p + table.qti-table {
+    --caption-block-size-p: calc(var(--caption-block-size, 0px) + 10px); /* 10px is the bottom margin of <p> */
 }
